# Advent-of-Code

./: .gitignore  README.md  \
2020/01_Report_repair/: main.py
2020/02_Password_philosophy/: main.py
2020/03_Toboggan_trajectory/: main.py
2020/04_Passport_processing/: main.py
2020/05_Binary_boarding/: main.py
2020/06_Custom_customs/: main.py
2020/07_Handy_haversacks/: main.py
2020/08_Handheld_halting/: main.py
2020/09_Encoding_error/: main.py
2020/10_Adapter_array/: main.py
2020/11_Seating_system/: main.py
2020/12_Rain_disk/: main.py
2020/13_Shuttle_search/: main.py
2020/14_Docking_data/: main.py
2020/15_Rambunctious_recitation/: main.py
2020/16_Ticket_translation/: main.py
2020/test/: CMakeLists.txt  algo.cpp  algo.h  compile_commands.json  main.cpp
2021/01_Sonar_sweep/: main.py
2021/02_Dive/: main.py
2021/03_Binary_diagnostic/: main.py
2021/04_Giant_squid/: main.py
2021/05_Hydrothermal_venture/: main.py
2021/06_Lanternfish/: main.py
2021/07_The_treachery_of_whales/: main.py
2021/08_Seven_segment_search/: main.py
2021/09_Smoke_basin/: main.py
2021/10_Syntax_scoring/: main.py
2021/11_Dumbo_octopus/: main.py
2021/12_Passage_pathing/: main.py
2021/13_Transparent_origami/: main.py
2021/14_Extended_polymerization/: main.py
2021/15_Chiton/: main.py
2021/16_Packet_decoder/: main.py  main2.py
2021/17_Trick_shot/: main.py
2021/18_Snailfish/: main.py
2021/19_Beacon_scanner/: main.py
2021/20_Trench_map/: main.py
2021/21_Dirac_dice/: main.py
2021/22_Reactor_reboot/: main.py
2024/: go.mod
(+81 files in other folders)
